<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.garcomapp.AlterarPratoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nome_prato"
            android:id="@+id/alterarprato_textView_novonome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/alterarprato_editText_novonome"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/preco"
            android:id="@+id/alterarprato_textView_preco" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/alterarprato_editText_preco" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/peso_em_gramas"
            android:id="@+id/alterarprato_textView_peso" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/alterarprato_editText_peso" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ingredientes"
            android:id="@+id/alterarprato_editText__ingredientes" />

        <Button
            android:onClick="adicionarIngredienteOnClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar"
            android:id="@+id/alterarprato_button_adicionar"
            android:layout_gravity="right" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:id="@+id/alterarprato_listView_ingredientes"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <Button
        android:onClick="cancelarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/alterarprato_button_cancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="alterarPratoOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        android:id="@+id/alterarprato_button_alterar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
