<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.garcomapp.NovoPratoActivity1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informe_campos"
        android:id="@+id/novoprato1_textView_adicioneingredientes"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/novoprato1_editText_nome"
        android:hint="@string/nome_prato"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/novoprato1_textView_adicioneingredientes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/novoprato1_editText_preco"
        android:layout_below="@+id/novoprato1_editText_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:layout_alignRight="@+id/novoprato1_editText_nome"
        android:layout_alignEnd="@+id/novoprato1_editText_nome"
        android:hint="@string/preco"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/novoprato1_editText_peso"
        android:layout_below="@+id/novoprato1_editText_preco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:layout_alignRight="@+id/novoprato1_editText_preco"
        android:layout_alignEnd="@+id/novoprato1_editText_preco"
        android:hint="@string/peso_em_gramas"
        android:inputType="number" />

    <Button
        android:onClick="prosseguirOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prosseguir"
        android:id="@+id/novopedido1_button_prosseguir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="cancelarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/novopedido1_button_cancelar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
