<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.garcomapp.DetalhesDePedidoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/valorareceber"
        android:id="@+id/detalhespedido_textView_valorareceber"
        android:layout_alignBottom="@+id/detalhespedido_textView_totalapagar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/precoinicial"
        android:id="@+id/detalhespedido_textView_totalapagar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:textColor="#ffd0151e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pratospedidos"
        android:id="@+id/detalhespedido_textView_pratospedidos"
        android:layout_below="@+id/detalhespedido_button_vernota"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="atendidoOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atendido"
        android:id="@+id/detalhespedido_button_atendido"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="alterarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        android:id="@+id/detalhespedido_button_alterar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="verNotaOnClick"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vernota"
        android:id="@+id/detalhespedido_button_vernota"
        android:layout_below="@+id/detalhespedido_textView_totalapagar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detalhespedido_listView_pratospedidos"
        android:layout_below="@+id/detalhespedido_textView_pratospedidos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/detalhespedido_button_atendido" />

</RelativeLayout>
