<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufam.garcomapp.AlterarPedidoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sequiseradicionarumpratoselecione"
        android:id="@+id/alterarpedido_textView_selecioneprato"
        android:layout_below="@+id/alterarpedido_textView_precoTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff919191"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alterarpedido_spinner_pratosBD"
        android:layout_below="@+id/alterarpedido_textView_selecioneprato"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/alterarpedido_editText_quantidade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/quantidade"
        android:layout_below="@+id/alterarpedido_spinner_pratosBD"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="alterarNotaOnClick"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnota"
        android:id="@+id/alterarpedido_button_adicionarnota"
        android:layout_above="@+id/alterarpedido_button_alterar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="adicionarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:id="@+id/alterarpedido_button_adicionar"
        android:layout_below="@+id/alterarpedido_editText_quantidade"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="alterarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alterar"
        android:id="@+id/alterarpedido_button_alterar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="cancelarOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/alterarpedido_button_cancelar"
        android:layout_alignBottom="@+id/alterarpedido_button_alterar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/precoinicial"
        android:id="@+id/alterarpedido_textView_precoTotal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffd0151e"
        android:textSize="25sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alterarpedido_listView_pratosadicionados"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/alterarpedido_button_adicionar"
        android:layout_above="@+id/alterarpedido_button_adicionarnota" />

</RelativeLayout>
